--- a/Actividad3_Grupo6.ipynb
+++ b/Actividad3_Grupo6.ipynb
@@ -58,6 +58,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "600d70b6",
+   "metadata": {},
+   "source": [
+    "Los objetivos generales de este proyecto es realizar un estudio a partir de un dataset sobre los precios de cada carburante en España y emplear sobre estos datos algoritmos de Machine Learning para predecir el precio de un carburante.\n",
+    "\n",
+    "Antes de trabajar con los modelos predictivos, realizaremos un estudio preliminar con el dataset para mostrar una serie de gráficas que nos permita mostrar el precio medio de cada carburante a lo largo del tiempo. Con esto podremos eliminar aquellos datos que no sean útiles para este estudio, y preparar un conjunto de datos para la fase de entrenamiento de los modelos predictivos.\n",
+    "\n",
+    "Los objetivos específicos serán:\n",
+    "\n",
+    "    - Análisis y manipulación de datos con dataframes (Pandas)\n",
+    "    - Representación de datos mediante gráficas (Matplotlib , Seaborn)\n",
+    "    - Construcción de modelos predictivos con algoritmos de machine learning (sklearn)\n",
+    "        - Regresión logística\n",
+    "        - K-NN\n",
+    "        - Random Forest\n",
+    "        -Regresión lineal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ed7daf12",
    "metadata": {},
    "source": [
