--- a/Exoplanetas-Actividad.ipynb
+++ b/Exoplanetas-Actividad.ipynb
@@ -55,10 +55,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ada37108",
+   "metadata": {},
+   "source": [
+    "Todos los planetas de nuestro sistema solar orbitan alrededor del Sol, los planetas que orbitan alrededor de otras estrellas se llaman exoplanetas.<br> \n",
+    "Los exoplanetas son muy difíciles de ver directamente con telescopios, están ocultos por el resplandor brillante de las estrellas que alrededor de las que orbitan.<br> <p>\n",
+    "\tEn la actualidad, se ha confirmado la existencia de casi cuatro mil exoplanetas. <br>\n",
+    "\tAlgunos son masivos, como Júpiter, pero giran alrededor de su estrella progenitora mucho más cerca de lo que Mercurio orbita el Sol. <br>\n",
+    "    Otros son rocosos o helados, \n",
+    "\ty muchos simplemente no tienen nada parecido en el Sistema Solar.<p> \n",
+    "\tHay sistemas que albergan más de un planeta, planetas que orbitan dos estrellas a la vez, \n",
+    "\te incluso un puñado de planetas que podrían presentar las condiciones adecuadas para que su superficie tenga agua de forma estable, uno de los elementos necesarios para la vida tal y como la conocemos. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47b929dc",
    "metadata": {},
    "source": [
     "## <center>Planteamiento</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a1ea42f",
+   "metadata": {},
+   "source": [
+    "En este analisis se estudiará el comportamiento de los exoplanetas a traves de los datos obtenidos del datasheet, los cuales haremos un tratamiento previo de ellos, aplicando los filtros necesarios para obtener unos datos más limpios con los que se \n",
+    "procederá a sacar obtener algunas gráficas representativas a continuación se procederá a aplicar los modelos y finalmete se realiazá la predicción de los resultados obtenidos de los modelos, según el criterio obtenidos tras el estudio.\n"
    ]
   },
   {
@@ -97,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f3a37891",
    "metadata": {},
    "outputs": [],
@@ -126,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "19665f8f",
    "metadata": {},
    "outputs": [],
@@ -137,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "id": "48228016",
    "metadata": {},
    "outputs": [
@@ -350,7 +374,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "735a4d33",
    "metadata": {},
    "outputs": [
@@ -372,7 +396,7 @@
        "(5140, 25)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3706,7 +3730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
